resources/sass/site2.scss
$mdc-theme-primary: #ff561c;
$mdc-theme-secondary: #ff561c;
$small-font-size: 0.81em;

@import "material-components-web/material-components-web";
@import "@material/theme/_color-palette";

@mixin link-color($color, $hover-color: darken($color, 20%), $active-color: lighten($color, 20%)) {
  text-decoration: none;
  &, &:visited {
    color: $color;
  }
  &:hover {
    color: $hover-color;
  }
  &:active, &.active {
    color: $active-color;
  }
}

// layout

body {
  margin: 0;
  padding: 0;
  min-width: 320px;
}

.svg-hidden {
  display: none;
}

.layout.fixed-width {
  height: 100vh;
  font-size: 1rem;
  display: grid;
  grid-template-columns: 1fr 1180px 1fr;
  grid-template-rows: min-content 40px auto 20px 40px;
  grid-template-areas:
    "header header header"
    ".      .      .     "
    ".      main   .     "
    ".      .      .     "
    "footer footer footer";
}

.layout.full-screen {
  height: 100vh;
  font-size: 1rem;
  display: grid;
  grid-template-columns: 30px 370px auto;
  grid-template-rows: min-content 30px auto 20px 40px;
  grid-template-areas:
    "header header header"
    "main   main   main"
    "main   main   main"
    "main   main   main"
    "footer footer footer";
}

$margin-page: 90px;

header {
  grid-area: header;
  z-index: 1;

  .mdc-toolbar__row {
    padding-left: $margin-page;
    padding-right: $margin-page;
  }

  .mdc-toolbar__title,  {
    margin: 0px;
  }

  #top-row {
    min-height: 48px;
    font-size: $small-font-size;
  }

  #section-row {
    display: flex;
    justify-content: flex-start;
    * {
      margin-right: 48px;
      font-size: 16px;
    }
  }

  #title-row {
    border-top: 1px solid #3A3A3A;
    height: 108px;

    .icon {
      width: 60px;
      height: 60px;
      position: absolute;
      left: 15px;
    }
  }

  #tabs-row {
    min-height: auto;
    height: 49px;

    .mdc-tab-bar {
      margin: inherit;
    }
  }

  #main-action {
    position: absolute;
    right: $margin-page;
    bottom: -27px;
  }
}

main {
  grid-area: main;
  display: flex;
  flex: 1;
  z-index: 0;
}

footer {
  grid-area: footer;
  padding: 14px 14px;
  border-top: 1px solid $material-color-grey-300;
  font-size: $small-font-size;
}

.layout.full-screen aside#sidebar {
  grid-column: 2;
  grid-row: 3;
  z-index: 20;
  @include mdc-elevation(2);
  background: #ffffff;
}
//

h1, h2, h3 { font-weight: 400; }

// Colors overrides
body {
  background-color: #efefef;
}

header.mdc-toolbar {
  background-color: #404040;
}

#account-menu {
  @include link-color(#9a9a9a);
  display: inline-flex !important;
  .icon-dropdown{
    margin-left: 4px;
  }
}

.gray-filter {
filter: grayscale(100%);
}


#top-row a {
  @include link-color(#9a9a9a);
}

#secondary-actions-handle {
  @include link-color(#9a9a9a);
}

#tabs-row {
  .mdc-tab {
    color: white;
  }

  .mdc-tab-bar__indicator {
    background-color: $mdc-theme-primary;
  }
}
//

.card-list {
  width: 100%;

  display: flex;
  flex-wrap: wrap;
  align-items: flex-start;
  align-content: flex-start;
  justify-content: flex-start;

  .card-item {
    align-self: flex-start;
    margin: 10px;

    $card-radius: 4px;
    border-radius: $card-radius;
    img {
      border-radius: $card-radius $card-radius 0px 0px;
    }

    background-color: #ffffff;
    @include link-color(#000000);

    @include mdc-elevation(2);
    &:hover {
      @include mdc-elevation(8);
    }
    @extend .mdc-elevation-transition;

    .card-secondary {
      padding: 1em;
      .actions {
        justify-content: space-between;
        display: flex;
      }
      }
    }
}

.panel {
  background-color: #ffffff;
  width: 100%;
  height: min-content;
}

form.vertical, .fields-vertical {
  display: flex;
  flex-flow: column;
}

.form-actions {
  text-align: right;
}

//

/* https://github.com/material-components/material-components-web/issues/719 */

.mdc-dialog .mdc-select {
  position: relative !important;
}
.mdc-dialog .mdc-select__menu {
  top: inherit !important;
  left: inherit !important;
  max-height: calc(100vh - 64px)!important;
  margin-top: 44px;
}

//

.file-input-wrapper {
  border: 1px solid #eee;
  padding: 5px;
  margin: 5px 0;
  &:hover {
    border: 1px dashed #ccc;
    background-color: #eeeeee;
  }
}

.file-input{
  color: transparent;
  width: 100px;
}

.set-list {
  .card-item {
    height: 160px;
    width: 300px;
    margin-bottom: 20px;

    h2 {
      font-size: 14px;
      font-weight: normal;
    }
  }
}

.map-container {
  position: absolute;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;

  > div {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
  }
}


.option-context {
  color: #ddd;
  float: right;
  font-size: 13px;
  margin-left: 5px;
  margin-right: 5px;
}

.tags {
  display: inline-block;
}



/* ============= MAP PANEL ================ */

.grey-text {
  color: #9a9a9a;
}
/* ... */

